--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,7 +22,7 @@ jobs:
         run: npm install
 
       - name: Build
-        run: chmod +x ./build.sh && ./build.sh
+        run: chmod +x ./deploy.sh && ./deploy.sh
 
       - name: Commit and Push
         run: |-
