--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Install and Build
         run: |
           npm install
-          npm docs:build
+          npm run docs:build
 
       # 部署到服务器
       - name: Upload to Deploy Server
