修改自动部署配置

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -39,7 +39,7 @@ jobs:
           # 服务器端口
           port: ${{ secrets.SERVER_PORT }}
           # 指定上传的文件目录(项目配置的打包目录名称)
-          source: 'docs/dist/*'
+          source: 'Xw-api-doc/docs/.vuepress/dist/*'
           # 指定上传服务器目录
           target: '/xiaowang/Xw-api-doc'
           # 解压时覆盖现有文件
