--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,15 +1,13 @@
 name: Build and Deploy
-# 监听 master 分支上的 push 事件
 on:
   push:
     branches:
       - master
+
 jobs:
   build-and-deploy:
-    # 构建环境使用 ubuntu
     runs-on: ubuntu-latest
     steps:
-      # 官方action, 将代码拉取到虚拟机
       - name: Checkout
         uses: actions/checkout@v3
         with:
@@ -18,35 +16,26 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
-          # 选择要使用的 node 版本
-          node-version: "16.20.2"
-          # 缓存 pnpm 依赖
+          node-version: "16"
+
       - name: Install and Build
         run: |
           npm install
           npm run docs:build
+          echo "Build finished"
+          ls -al Xw-api-doc/docs/.vuepress/
 
       - name: List files
         run: ls -al Xw-api-doc/docs/.vuepress/dist/
 
-
-    # 部署到服务器
       - name: Upload to Deploy Server
         uses: appleboy/scp-action@master
         with:
-          # 服务器域名
           host: ${{ secrets.SERVER_HOST }}
-          # 服务器用户名
           username: ${{ secrets.SERVER_USERNAME }}
-          # 服务器密码
           password: ${{ secrets.SERVER_PASSWORD }}
-          # 服务器端口
           port: ${{ secrets.SERVER_PORT }}
-          # 指定上传的文件目录(项目配置的打包目录名称)
-          source: './Xw-api-doc/docs/.vuepress/dist/*'
-          # 指定上传服务器目录
+          source: 'Xw-api-doc/docs/.vuepress/dist/*'
           target: '/xiaowang/Xw-api-doc'
-          # 解压时覆盖现有文件
           overwrite: true
-          # 删除指定数量的前导路径元素
           strip_components: 0
